Added new logging API (Logback), pending to change all the logging to this new API Minor changes and code cleaning

--- a/GCMServer/src/main/resources/application.properties
+++ b/GCMServer/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-gcm.attributeAccesKey = myKey
-
+gcm.attributeAccesKey = AIzaSyBqFNETBx8mzp1obwPsMyAIN7ClbIZKegc
+gcm.projectID =243839256156
+logging.file
+logging.path
 
 
 spring.thymeleaf.cache=false
