New structure for Java packages and package.info files deleted Device Controller, model and core classes developed Unit testing redy Changed button by input in forms views

--- a/GCMServer/src/main/resources/application.properties
+++ b/GCMServer/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 gcm.attributeAccesKey = AIzaSyBqFNETBx8mzp1obwPsMyAIN7ClbIZKegc
-gcm.projectID =243839256156
+gcm.projectID = 243839256156
 logging.file
 logging.path
-
-server.context-path=
-spring.thymeleaf.cache=false
+gcm.XMLfile = static/storage/deviceList.xml
+gcm.rootPath = static/storage/deviceList.xml
+server.context-path =
+spring.thymeleaf.cache = false
